--- a/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionsTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionsTemplate.cshtml
@@ -20,7 +20,7 @@ namespace @Settings.Namespace
     {
         @foreach (var method in Model.MethodTemplateModels)
         {
-            @:@(Include<ExtensionMethodTemplate, MethodTemplateModel>(method))
+            @:@(Include(new ExtensionMethodTemplate(), method))
             @EmptyLine 
         }
     }
