--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureMethodTemplate.cshtml
@@ -10,7 +10,7 @@
 
 @if (!Model.IsLongRunningOperation)
 {
-@:@(Include<MethodTemplate, MethodTemplateModel>(Model))
+@:@(Include(new MethodTemplate(), (MethodTemplateModel)Model))
 }
 else if (Model.HttpMethod == HttpMethod.Post || Model.HttpMethod == HttpMethod.Delete)
 {
