--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupTemplate.cshtml
@@ -40,7 +40,7 @@ namespace @Settings.Namespace
         @EmptyLine
         @foreach (var method in Model.MethodTemplateModels)
         {
-        @:@(Include<MethodTemplate, MethodTemplateModel>(method))
+        @:@(Include(new MethodTemplate(), method))
         @EmptyLine
         }
     }
