Fixing FxCop Issues in runtime and sdisabling checks in ruby

--- a/AutoRest/Generators/Ruby/Ruby/Templates/OperationsTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/OperationsTemplate.cshtml
@@ -24,7 +24,7 @@ module @Settings.Namespace
     @EmptyLine
     @foreach (var method in Model.MethodTemplateModels)
     {
-    @:@(Include<MethodTemplate, MethodTemplateModel>(method))
+    @:@(Include( new MethodTemplate(),method))
     @EmptyLine
     }
   end
