--- a/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
@@ -24,8 +24,8 @@ module @Settings.Namespace
 
 @foreach (var operation in Model.MethodGroups) 
 {
-    @:@WrapComment("# ", string.Format("@return {0}", RubyCodeNamingFramework.UnderscoreCase(operation)))
-    @:attr_reader :@(RubyCodeNamingFramework.UnderscoreCase(operation))
+    @:@WrapComment("# ", string.Format("@return {0}", RubyCodeNamer.UnderscoreCase(operation)))
+    @:attr_reader :@(RubyCodeNamer.UnderscoreCase(operation))
 @EmptyLine
 }
 
@@ -45,7 +45,7 @@ module @Settings.Namespace
       @@base_url = base_url || '@Model.BaseUrl'
       @foreach (var operation in Model.MethodGroups) 
       {
-      @:@@@(RubyCodeNamingFramework.UnderscoreCase(operation)) = @(operation).new(self)
+      @:@@@(RubyCodeNamer.UnderscoreCase(operation)) = @(operation).new(self)
       }
       @foreach (var param in parameters)
       {
@@ -61,7 +61,7 @@ module @Settings.Namespace
     @EmptyLine
     @foreach (var method in Model.MethodTemplateModels)
     {
-    @:@(Include<MethodTemplate, MethodTemplateModel>(method))
+    @:@(Include(new MethodTemplate(), method))
     @EmptyLine
     @:
     }
