Updated Ruby and Ruby.Tests projects, ClientRuntime and build.proj to allow Ruby to be integrated into Azure's CI.

--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -27,17 +27,9 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   }
 
   # Construct URL
-  @if (Model.UrlWithPath)
-  {
-  @:path = '/@(Model.UrlWithoutParameters.TrimStart('/'))'
-  @:@(Model.BuildUrlPath("path"))
-  @:url = URI.join(@(Model.UrlReference), path)
-  }
-  else
-  {
-  @:url = URI.join(@(Model.UrlReference), '/@(Model.UrlWithoutParameters.TrimStart('/'))')
-  }
-  @(Model.BuildUrlParametres("url"))
+  path = "@Model.Url"
+  @(Model.BuildUrl("path", "url"))
+  @(Model.RemoveDuplicateForwardSlashes("url"))
 
   @EmptyLine
   # Create HTTP transport objects
