--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodGroupTemplate.cshtml
@@ -1,16 +1,16 @@
 ﻿@using Microsoft.Rest.Generator.Ruby
 @using Microsoft.Rest.Generator.Ruby.Templates
-@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.OperationsTemplateModel>
+@inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.MethodGroupTemplateModel>
 @Header("# ")
 @EmptyLine
 module @Settings.Namespace
   #
-  @WrapComment("# ", string.IsNullOrEmpty(Model.Documentation) ? Model.OperationName : Model.Documentation)
+  @WrapComment("# ", string.IsNullOrEmpty(Model.Documentation) ? Model.MethodGroupName : Model.Documentation)
   #
-  class @(Model.OperationName)
+  class @(Model.MethodGroupName)
 
     #
-    # Creates and initializes a new instance of the @Model.OperationName class.
+    # Creates and initializes a new instance of the @Model.MethodGroupName class.
     # @@param client service class for accessing basic functionality.
     #
     def initialize(client)
@@ -24,7 +24,7 @@ module @Settings.Namespace
     @EmptyLine
     @foreach (var method in Model.MethodTemplateModels)
     {
-    @:@(Include( new MethodTemplate(),method))
+    @:@(Include(new MethodTemplate(), method))
     @EmptyLine
     }
   end
