--- a/AutoRest/Generators/Ruby/Ruby/Templates/RequirementsTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/RequirementsTemplate.cshtml
@@ -3,17 +3,7 @@
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Ruby.RequirementsTemplateModel>
 @Header("# ")
 @EmptyLine
-require 'uri'
-require 'cgi'
-require 'date'
-require 'json'
-require 'base64'
-require 'securerandom'
-require 'time'
-require 'timeliness'
-require 'duration'
-require 'concurrent'
-require 'client_runtime'
+@Model.GetDependencyGems()
 @EmptyLine
 @Model.GetModelsRequiredFiles()
 @Model.GetOperationsRequiredFiles()
