--- a/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
@@ -24,8 +24,8 @@ module @Settings.Namespace
 
 @foreach (var operation in Model.MethodGroups) 
 {
-    @:@WrapComment("# ", string.Format("@return {0}", RubyCodeNamer.UnderscoreCase(operation)))
-    @:attr_reader :@(RubyCodeNamer.UnderscoreCase(operation))
+    @:@WrapComment("# ", string.Format("@return {0}", RubyCodeNamingFramework.UnderscoreCase(operation)))
+    @:attr_reader :@(RubyCodeNamingFramework.UnderscoreCase(operation))
 @EmptyLine
 }
 
@@ -45,11 +45,11 @@ module @Settings.Namespace
       @@base_url = base_url || '@Model.BaseUrl'
       @foreach (var operation in Model.MethodGroups) 
       {
-      @:@@@(RubyCodeNamer.UnderscoreCase(operation)) = @(operation).new(self)
+      @:@@@(RubyCodeNamingFramework.UnderscoreCase(operation)) = @(operation).new(self)
       }
       @foreach (var param in parameters)
       {
-      @:fail ArgumentError, '@param.Name is nil' if @@@(param.Name).nil?
+      @:fail ArgumentError, '@param.Name is nil' if @(param.Name).nil?
       }
       @foreach (var param in parameters)
       {
