Fixed IDisposable FXCop issue Added missing AzureCommon tests

--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -16,7 +16,7 @@ namespace @Settings.Namespace
     /// <summary>
     @WrapComment("/// ", Model.Documentation.EscapeXmlComment())
     /// </summary>
-    public partial interface I@(Model.Name) : IDisposable
+    public partial interface I@(Model.Name)
     {
         /// <summary>
         /// The base URI of the service.
