Updated to latest version of ClientRuntime Changed ArgumentNullException to ValidationException Regenerated expected files

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -23,7 +23,7 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithO
         {
     @:if (@(parameter.Name) == null)
     @:{
-        @:throw new ArgumentNullException("@(parameter.Name)");
+        @:throw new ValidationException(ValidationRules.CannotBeNull, "@(parameter.Name)");
     @:}
 @:
         }
