--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -58,7 +58,7 @@ namespace @(Settings.Namespace).Models
                 anythingToValidate = true;
             @:if (@property.Name == null)
             @:{
-                @:throw new ArgumentNullException("@property.Name");
+                @:throw new ValidationException(ValidationRules.CannotBeNull, "@property.Name");
             @:}
             @:
             }
