Updated Azure.Ruby to support basic functionality of Storage swagger spec.

--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
@@ -1,5 +1,5 @@
-﻿@using Microsoft.Rest.Generator.Azure.Ruby
-@using Microsoft.Rest.Generator.Azure.Ruby.Templates
+﻿@using AutoRest.Generator.Azure.Ruby.Templates
+@using Microsoft.Rest.Generator.Azure.Ruby
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Azure.Ruby.AzureMethodGroupTemplateModel>
 @Header("# ")
 @EmptyLine
