--- a/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
@@ -41,7 +41,7 @@ module @Settings.Namespace
     }
     #
     def initialize(base_url = nil@(Model.RequiredContructorParametersWithSeparator))
-      super()
+      super(@(Model.BaseClassParams))
       @@base_url = base_url || '@Model.BaseUrl'
       @foreach (var operation in Model.MethodGroups) 
       {
