Added Azure.Ruby tests to build.proj

--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodGroupTemplate.cshtml
@@ -1,4 +1,4 @@
-﻿@using AutoRest.Generator.Azure.Ruby.Templates
+﻿@using Microsoft.Rest.Generator.Azure.Ruby.Templates
 @using Microsoft.Rest.Generator.Azure.Ruby
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Azure.Ruby.AzureMethodGroupTemplateModel>
 @Header("# ")
