--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodTemplate.cshtml
@@ -45,7 +45,7 @@ else
       get_method = lambda { self.@(Model.GetMethod.Name)(@(Model.GetMethod.MethodParameterDeclaration)) }
 
       # Waiting for response.
-      return @(Model.ClientReference).get_put_operation_result_async(response, get_method).value!
+      return @(Model.ClientReference).get_put_operation_result(response, get_method)
     end
     </text>
 }
