--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -87,8 +87,6 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
       rescue Exception => e
         fail ClientRuntime::DeserializationError.new("Error occured in deserializing the response", e.message, e.backtrace, response_content)
       end
-
-      result
     end
     </text>
     }
@@ -100,11 +98,12 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
       @(Model.CreateDeserializationString("response_content", Model.ReturnType, "result.body", Settings.Namespace))
     rescue Exception => e
       fail ClientRuntime::DeserializationError.new("Error occured in deserializing the response", e.message, e.backtrace, response_content)
-       end
- 
-    result
+    end
     </text>
     }
+
+    @EmptyLine
+    result
   end
 
   @EmptyLine
