--- a/AutoRest/Generators/Ruby/Ruby/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/EnumTemplate.cshtml
@@ -8,7 +8,7 @@ module @Settings.Namespace
   module @(Model.TypeDefinitionName)
     @for (int i = 0; i < Model.Values.Count; i++)
     {
-    @:@(Model.Values[i].SerializedName) = "@(Model.Values[i].Name)"
+    @:@(Model.Values[i].Name) = "@(Model.Values[i].SerializedName)"
     }
   end
 end
