--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodTemplate.cshtml
@@ -10,12 +10,20 @@
  @:* @@param {@parameter.Type.Name} [@parameter.Name] @parameter.Documentation
  @:*
 }
+@WrapComment(" * ", " @param {object} [options]")
+ *
+@WrapComment(" * ", " @param {object} [options.customHeaders] headers that will be added to request")
+ *
 @WrapComment(" * ",  " @param {function} callback")
  *
 @WrapComment(" * ",  " @returns {Stream} The Response stream")
  */
 @(Model.OperationName).prototype.@(Model.Name) = function (@(Model.MethodParameterDeclarationWithCallback)) {
   var client = @(Model.ClientReference);
+  if(!callback && typeof options === 'function') {
+    callback = options;
+    options = null;
+  }
   if (!callback) {
     throw new Error('callback cannot be null.');
   }
@@ -69,7 +77,6 @@
   @:}
   }
   httpRequest.headers['Content-Type'] = 'application/json; charset=utf-8';
-
   @if (Model.RequestBody != null)
   {
   <text>
@@ -86,6 +93,13 @@
   httpRequest.body = null;
   httpRequest.headers['Content-Length'] = 0;
   </text>
+  }
+  if(options) {
+    for(var headerName in options['customHeaders']) {
+      if (options['customHeaders'].hasOwnProperty(headerName)) {
+        httpRequest.headers[headerName] = options['customHeaders'][headerName];
+      }
+    }
   }
   // Send Request
   return client.pipeline(httpRequest, function (err, response, responseBody) {
