- Fixed Ruby.Tests - adjusted client initialization with credentials object. - Removed extra class - RubyCodeNamingFramework and all references to it.

--- a/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ServiceClientTemplate.cshtml
@@ -40,6 +40,7 @@ module @Settings.Namespace
       @@base_url = base_url || '@Model.BaseUrl'
       @EmptyLine
       fail ArgumentError, 'credentials is nil' if credentials.nil?
+      fail ArgumentError, 'invalid type of credentials input parameter' unless credentials.is_a?(ClientRuntime::ServiceClientCredentials)
       @@credentials = credentials
       @EmptyLine
       @foreach (var operation in Model.MethodGroups) 
