--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodGroupInterfaceTemplate.cshtml
@@ -23,7 +23,7 @@ namespace @Settings.Namespace
         @:/// <summary>
         @:@WrapComment("/// ", method.Documentation.EscapeXmlComment())
         @:/// </summary>
-        foreach (var parameter in method.Parameters)
+        foreach (var parameter in method.LocalParameters)
         {
         @:/// <param name='@parameter.Name'>
         @:@WrapComment("/// ", parameter.Documentation.EscapeXmlComment())
