--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
@@ -25,14 +25,17 @@ var WebResource = msRest.WebResource;
 @:var operations = require('./operations');
 }
 @EmptyLine
+@{var parameters = Model.Properties.Where(p => p.IsRequired);}
 /**
  * @@class
  * Initializes a new instance of the @Model.Name class.
  * @@constructor
  *
- * @@param {ServiceClientCredentials} credentials - Credentials for
- * authenticating with the service.
- *
+@foreach (var param in parameters)
+{
+@: * @@param {@param.Type.Name} [@param.Name] @param.Documentation
+@: *
+}
  * @@param {string} [baseUri] - The base URI of the service.
  *
  * @@param {object} [options] - The parameter options
@@ -44,23 +47,31 @@ var WebResource = msRest.WebResource;
  *
  * @@param {bool} [options.noRetryPolicy] - If set to true, turn off default retry policy
  */
-function @(Model.Name)(credentials, baseUri, options) {
-  if (!credentials) {
-    throw new Error('credentials cannot be null.');
-  }
+function @(Model.Name)(@(Model.RequiredConstructorParameters), options) {
+@foreach (var param in parameters)
+{
+@:  if (@(param.Name) === null || @(param.Name) === undefined) {
+@:    throw new Error('\'@(param.Name)\' cannot be null.');
+@:  }
+}
   @EmptyLine
   if (!options) options = {};
   @EmptyLine
-  @(Model.Name)['super_'].call(this, credentials, options);
+  @(Model.Name)['super_'].call(this, @(parameters.Any(p => p.Name == "credentials") ? "credentials" : "null"), options);
   this.baseUri = baseUri;
-  this.credentials = credentials;
   if (!this.baseUri) {
     this.baseUri = '@Model.BaseUrl';
   }
+@foreach (var param in parameters)
+{
+@:  this.@(param.Name) = @(param.Name);
+}
   @EmptyLine
   @foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
   {
-  @:this.@(property.Name) = @(property.DefaultValue);
+  @:if(!this.@(property.Name)) { 
+  @:  this.@(property.Name) = @(property.DefaultValue);
+  @:}
   }
   
   @foreach (var methodGroup in Model.MethodGroupModels)
