--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -36,7 +36,7 @@ namespace @Settings.Namespace
         @WrapComment("/// ", method.Documentation.EscapeXmlComment())
         /// </summary>
         </text>    
-        foreach (var parameter in method.Parameters)
+        foreach (var parameter in method.LocalParameters)
         {
         @:/// <param name='@parameter.Name'>
         @:@WrapComment("/// ", parameter.Documentation.EscapeXmlComment())
