Fixed tests put200succeeded_no_state, put202retry200 and put200succeeded.

--- a/AutoRest/Generators/Ruby/Ruby/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ModelTemplate.cshtml
@@ -14,7 +14,8 @@ module @(Settings.Namespace)
     @foreach (var property in Model.PropertyTemplateModels)
     {
       @:@WrapComment("# ", string.Format("@return {0}{1}", property.Type.GetYardDocumentation(), property.Documentation))
-      @:@(property.IsReadOnly ? "attr_reader" : "attr_accessor") :@property.Name
+      // @:@(property.IsReadOnly ? "attr_reader" : "attr_accessor") :@property.Name
+      @:attr_accessor :@property.Name
       @EmptyLine
       @:
     }
