--- a/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Azure.Ruby/Templates/AzureMethodTemplate.cshtml
@@ -22,7 +22,7 @@ else if (Model.HttpMethod == HttpMethod.Post || Model.HttpMethod == HttpMethod.D
     def @(Model.Name)(@(Model.MethodParameterDeclaration))
       # Send request
       response = begin_@(Model.Name)(@(Model.MethodParameterDeclaration)).value!
-      return @(Model.ClientReference).get_post_or_delete_operation_result(response, nil)
+      return @(Model.ClientReference).get_post_or_delete_operation_result(response, nil, nil)
     end
     </text>
 }
@@ -40,12 +40,17 @@ else
     def @(Model.Name)(@(Model.MethodParameterDeclaration))
       # Send request
       response = begin_@(Model.Name)(@(Model.MethodParameterDeclaration)).value!
-
+      @EmptyLine
       # Defining polling method.
       get_method = lambda { self.@(Model.GetMethod.Name)(@(Model.GetMethod.MethodParameterDeclaration)) }
-
+      @EmptyLine
+      # Defining deserialization method.
+      deserialize_method = lambda do |parsed_response|
+        @(Model.DeserializePollingResponse("parsed_response", Model.ReturnType, false, Settings.Namespace))
+      end
+      @EmptyLine
       # Waiting for response.
-      return @(Model.ClientReference).get_put_operation_result(response, get_method, nil)
+      return @(Model.ClientReference).get_put_operation_result(response, get_method, nil, deserialize_method)
     end
     </text>
 }
