--- a/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/Azure.CSharp/Templates/AzureServiceClientTemplate.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Rest.Generator.CSharp
+﻿@using System
+@using Microsoft.Rest.Generator.CSharp
 @using Microsoft.Rest.Generator.CSharp.Templates
 @using Microsoft.Rest.Generator.CSharp.Azure
 @using Microsoft.Rest.Generator.CSharp.Azure.Templates
@@ -120,7 +121,7 @@ namespace @Settings.Namespace
         }
         @EmptyLine
 
-        @{var parameters = Model.Properties.Where(p => p.IsRequired);}
+        @{var parameters = Model.Properties.Where(p => p.IsRequired && p.IsReadOnly);}
         @if (parameters.Any())
         {
         @:/// <summary>
@@ -203,6 +204,15 @@ namespace @Settings.Namespace
         @foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
         {
             @:this.@(property.Name) = @(property.DefaultValue);
+        }
+
+        @if (Model.Properties.Any(p => "Credentials".Equals(p.Name, StringComparison.OrdinalIgnoreCase) &&
+            "SubscriptionCloudCredentials".Equals(p.Type.Name, StringComparison.OrdinalIgnoreCase)))
+        {
+            @:if (this.Credentials != null)
+            @:{
+            @:    this.Credentials.InitializeServiceClient(this);
+            @:}
         }
             SerializationSettings = new JsonSerializerSettings
             {
