--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -69,18 +69,27 @@ public async Task<@(Model.OperationResponseReturnTypeString)> @(Model.Name)WithH
     httpRequest.Method = new HttpMethod("@(Model.HttpMethod.ToString().ToUpper())");
     httpRequest.RequestUri = new Uri(url);
     // Set Headers
+    @(Model.SetDefaultHeaders)
     @foreach (var parameter in Model.Parameters.Where(p => p.Location == ParameterLocation.Header))
     {
     @:if (@(parameter.Name) != null)
     @:{
-    @:    httpRequest.Headers.Add("@(parameter.SerializedName)", @parameter.Type.ToString(Model.ClientReference, parameter.Name));
+    @:    if (httpRequest.Headers.Contains("@(parameter.SerializedName)"))
+    @:    {
+    @:        httpRequest.Headers.Remove("@(parameter.SerializedName)");
+    @:    }
+    @:    httpRequest.Headers.TryAddWithoutValidation("@(parameter.SerializedName)", @parameter.Type.ToString(Model.ClientReference, parameter.Name));
     @:}
     }
     if (customHeaders != null)
     {
         foreach(var header in customHeaders)
         {
-            httpRequest.Headers.Add(header.Key, header.Value);
+            if (httpRequest.Headers.Contains(header.Key))
+            {
+                httpRequest.Headers.Remove(header.Key);
+            }
+            httpRequest.Headers.TryAddWithoutValidation(header.Key, header.Value);
         }
     }
     @EmptyLine
