--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -41,7 +41,11 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
   @:# Set Headers
     foreach (var parameter in Model.Parameters.Where(p => p.Location == ParameterLocation.Header))
     {
-  @:http_request.add_field("@(parameter.SerializedName)", @parameter.Type.ToString(parameter.Name));
+        if (parameter.SerializedName.ToLower() == "Content-Type".ToLower())
+        {
+  @:fail RuntimeError, 'Header Content-Type is forbidden to change'
+        }
+  @:http_request["@(parameter.SerializedName)"] = @parameter.Type.ToString(parameter.Name)
     }
   }
 
