--- a/AutoRest/Generators/CSharp/CSharp/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/EnumTemplate.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.CSharp.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.EnumTemplateModel>
-@Header("/// ")
+@Header("// ")
 namespace @(Settings.Namespace).Models
 {
     using Newtonsoft.Json;
