--- a/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionsTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ExtensionsTemplate.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.Rest.Generator.CSharp.Templates
 @using Microsoft.Rest.Generator.CSharp.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ExtensionsTemplateModel>
-@Header("/// ")
+@Header("// ")
 namespace @Settings.Namespace
 {
     using System;
