--- a/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ServiceClientTemplate.cshtml
@@ -4,7 +4,7 @@
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.CSharp.ServiceClientTemplateModel>
-@Header("/// ")
+@Header("// ")
 namespace @Settings.Namespace
 {
     using System;
