--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodStreamPipelineTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/MethodStreamPipelineTemplate.cshtml
@@ -25,6 +25,7 @@ return client.pipeline(httpRequest, function (err, response) {
   var result = new msRest.HttpOperationResponse();
   result.request = httpRequest;
   result.response = response;
+  @Model.InitializeResponseBody
   result.body = response;
   return callback(null, result);
 });
